objects/Wohnung__c.object
<CustomObject>
    <fields>
        <fullName>Avis_Perso__c</fullName>
        <label>Avis Perso</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacté</fullName>
                </value>
                <value>
                    <fullName>Visite Prévue</fullName>
                </value>
                <value>
                    <fullName>Dejà Visité</fullName>
                </value>
                <value>
                    <fullName>Closed/Won</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_le__c</fullName>
        <label>Visité le</label>
        <type>Date</type>
    </fields>
    <label>Wohnung</label>
    <nameField>
        <label>Wohnung Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wohnungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>true</fullName>
        <active>true</active>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>error..</errorMessage>
    </validationRules>
</CustomObject>